Horizontal scrollbar mobile fix attempt 2

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,10 @@
     body {
         overflow-x: hidden;
         position: relative;
+
+        #__nuxt {
+            overflow-x: hidden;
+        }
     }
 }
 
